test/types/file/freadIntFailed.good
freadIntFailed.chpl:2: error: Unhandled system error: Invalid argument (22) in file.reader with path _test_freadIntFailed.txt
